# Course_Project_4_2.0

./: README.md  pyproject.toml
HH_&_SJ/: api_hh.py  api_manager.py  api_superjob.py  main.py  vacancies.json  vacancy.py
